style.css
* {
    text-align: center;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Open Sans'
}

body {
  position: relative;
  top: 25%;
  left: 50%;
  transform: translate(-50%,-25%);
  background-color: #00aaff;
  height: 100vh;
  width: 100vw;
  max-width: 414px;
  max-height: 736px;
  overflow: hidden;
}

.container {
  margin-top: 10px;
  max-width: 414px;
}

button:focus {
    outline: 0;
}

#lunch_heading {
    font-size: 30px;
    color: white;
    text-shadow: 0 5px 8px black;
    padding: 1vh 0 3vh 0;
    font-family: 'Pacifico';
}

#description {
    color: white;
    text-shadow: 0 1px 1px black;
}

.landing-heading {
    color: white;
    text-shadow: 0px 1px 3px black;
}

#random {
    position: absolute;
    left: 0;
    top: 50%;
    height: 100%;
    width: 100%;
    text-align: center;
    margin-top: -43px;
    color: #FFF;
    text-shadow: 1px 3px 4px black;
    font-family: 'Pacifico';
}

.circle {
    position: absolute;
    left: 33%;
    top: 50%;
    height: 175px;
    width: 175px;
    margin: -25px 0 0 -25px;
    cursor: pointer;
    border-radius: 999em;
    z-index: 0;
    background: #ffaa00;
    box-shadow: 0 6px 9px 0 rgba(0, 0, 0, 0.75);
    font-size: 36px;
}

.circle > #show {
    display: none;
}

.circle.expanded > #random {
    display: none;
}

#login-button {
    color: #fff;
    background-color: #ffaa00;
    border-color: #ffaa00;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.submit {
    background-color: #33b5e5;
    color: white;
    padding: 5px 0 5px 0;
}

.submit:hover {
    background-color: #349fd0;
    cursor: pointer;
    color: white;
    padding: 5px 0 5px 0;
}

.login-fields {
    border: 1px solid #e9e9e9;
    margin-bottom: 8px;
    padding: 5px;
}

.login-icon {
    background-color: #55acee;
    color: white;
}

.modal-dialog {
    margin-top: 50%;
}

.info-container {
    display: inline-block;
    height: 45px;
    margin-top: 5px;
    padding: 0;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    background-color: rgba(255,255,255,0.9);
    overflow:hidden;
    word-wrap: break-word;
}

/**************************************  CAROUSEL   **************************************************/

/*CAROUSEL IMAGE SCALING*/
.carousel-inner > .item > img,
.carousel-inner > .item > a > img {
    #width: 80%;
    #max-height: 80%;
    margin: auto;
}

.carousel-inner {
    height: 90vh;
    border: 2px solid orange;}
.result-img-holder{
    border: 2px solid green;
    height: 40vh;
}
.result-info-div{
    border: 2px solid yellow;
    height: 45vh;
}
.btn-container{
    border: 2px solid greenyellow;
    height: 10vh;
    position: absolute;
    bottom: 0;
    width: 100%;
}
.more-info-btn,.nav-btn {
    position: absolute;
    bottom: 1vh;
    background-color: white;
    right: 10vw;
    width: 30%;
    height: 8vh;
    border-radius: 10px;
}
.nav-btn {
    border: 1px solid greenyellow;
    left: 10vw;
}


#results-page {
    overflow: hidden;
    height: 100vh;
    width: 100vw;
}

.result-card {
    position: absolute !important;
    height: 86%;
    width: 90%;
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    box-shadow: 0 5px 5px rgba(0,0,0,0.19), 0 2px 2px rgba(0,0,0,0.23);
}

.result-image {
    position: relative;
    display: inline-block;
    float: left;
    left: 26%;
    transform: translateX(-50%);
    /* margin-top: 9%; */
    margin-bottom: 0%;
    height: 23%;
    width: 37%;
    border-radius: 50%;
    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.75);
}

.address-text-holder {
    position: relative;
    left: 30%;
    transform: translateX(-55%);
    height: 24%;
    width: 57%;
    display: inline-block;
    padding-top: 19px;
    float: right;
}

.more-info-holder {
    height: 50%;
    width: 94%;
    margin-top: 3%;
    display: inline-block;
    background-color: rgba(255,255,255,0.8);
    box-shadow: 0 1px 0px rgba(0,0,0,0.1), 0 3px 5px rgba(0,0,0,0.08);
    overflow: hidden;
    overflow-y: scroll;
}

.button-holder {
    position: relative;
    display: inline-block;
    /* left: 50%; */
    /* top: 16%; */
    /* transform: translate(-53%, -11%); */
    height: 8%;
    margin-top: 3px;
    width: 90%;
}

.result-button {
    height: 100%;
}

.prev-button i,
.next-button i {
    text-align: center;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    font-size: 20px;
    color: black;
}

.navigation-button,
.next-button,
.prev-button {
    margin-top: 6%;
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    height: 100%;
    width: 58%;
    border-radius: 50%;
    cursor: pointer;
    z-index: 0;
    background: #00cbff;
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    color: white;
}

.navigation-button:hover,
.next-button:hover,
.prev-button:hover{
    background: #0084b3;
}

.navigation-button:active,
.next-button:active,
.prev-button:active{
    background: #048eff;
}

.next-button > i,
.prev-button > i{
    color: white;
}

.navigation-button p {
    text-align: center;
    padding-top: 27%;
    padding-left: 5%;
    font-family: "Pacifico";
    text-shadow: 0px 1px 1px black;
}


/**************************************  MEDIA QUERY   **************************************************/
/*@media screen and (max-width: 800px) {*/

    #lunch_heading {
        font-size: 5vh;
        padding: 0;
        text-shadow: 1px 3px black;
    }

    #description > * {
        font-size: 2.5vh;
    }

    #image-carousel {
        height: 35%;
        width: 93%;
        overflow: hidden;
        transform: translate(4%,-27%);
        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    }

    #carousel-images  {
        height: 100%;
    }

    #result-div {
        width: 93%;
        height: 87vh;
        transform: translate(4%, 12%);
        background-color: white;
        /* background-color: rgba(0,0,0,0.33); */
        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
    }

    #image-holder {
        height: 37%;
        width: 93%;
        transform: translate(4%,-26%);
        background-color: rgba(0,0,0,0.50);
        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
        overflow: hidden;
    }

    #food-img {
        position: absolute;
        height: 96%;
        width: 80%;
        left: 0;
        transform: translate(13%,2%);
    }

    #results-info-div {
        background-color: rgba(0,0,0,0.50);
        height: 57%;
        width: 93%;
        transform: translate(4%,-19%);
        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    }

    #selection-info-div {
        background-color: rgba(0,0,0,0.50);
        height: 59%;
        width: 93%;
        transform: translate(0%,-13%);
        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    }

    .info-container {
        display: inline-block;
        height: 45px;
        margin-top: 5px;
        padding: 0;
        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
        background-color: rgba(255,255,255,0.9);
        overflow:hidden;
        word-wrap: break-word;
    }

    .info-container > p {
        font-size: 11px;
    }

    .info-container > i {
        color: #337ab7;
        padding-top: 6px;
    }

    .restaurant-info {
        float: left;
        height: 35%;
        width: 20%;
        margin: 18px 0 0 13px;
        background-color: rgba(0,0,0,0.5);
        padding-top: 12px;
        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
        color: white;
    }

    .restaurant-info > i {
        padding-bottom: 5px;
    }

    /*.info-content {*/
    /*margin-top: 6%;*/
    /*}*/

    .landing-heading {
        margin-top: 3px;
        font-size: 2vh;
    }
    .animate {
        transition: all 0.1s;
        -webkit-transition: all 0.1s;
    }

    .action-button {
        position: relative;
        padding: 8px 20px;
        margin: 0px 10px 10px 0px;
        border-radius: 5px;
        font-family: 'Pacifico';
        font-size: 20px;
        color: #FFF;
        text-decoration: none;
        background-color: red;
        border-bottom: 5px solid #ce0010;
        text-shadow: 0px 2px 3px #3b3b3b;
        top: 5vh;
        transform: translate(5%,0%);
    }

    .action-button:active {
        transform: translate(0px,5px);
        -webkit-transform: translate(0px,5px);
        border-bottom: 1px solid;
    }

    #more-info {
        font-family: 'Pacifico';
        background-color: rgba(0,0,0,0.5);
        height: 26%;
        width: 26%;
        border-radius: 50%;
        background-color: red;
        font-size: 15px;
        text-shadow: 0 2px 4px black;
        transform: translate(1%,23%);
        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    }

    .restaurant-info-back {
        height: 44px;
        padding: 0;
        background-color: whitesmoke;
        margin-bottom: 6px;
        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    }

    .info-aside {
        background-color: white;
        color: black;
        height: 44px;
        padding: 0;
        margin-bottom: 6px;
        text-shadow: none;
        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    }

/*}*/

